copy existing wrapper script